--- a/templates/photos.html
+++ b/templates/photos.html
@@ -1,53 +1,113 @@
 <!doctype html>
-<html>
-  <head>
-    <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-    <title>Photo Album</title>
-  </head>
+<html lang="en">
 
-  <body>
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-{% from "_formhelpers.html" import render_field %}
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-<h1>Photo Album Example</h1>
-<p>Note: The latest {{ max_photos }} photos are shown.</p>
-<div>
-  <form method=post action={{ url_for('photos') }} enctype="multipart/form-data">
-    {{ render_field(tag_form.tag) }}
-  </form>
-</div>
-<hr>
-<div>
-  <form method=post action={{ url_for('post') }} enctype="multipart/form-data">
-    {{ render_field(photo_form.input_photo) }}
-    <br/>
-    <input type=submit value='Upload' name='submit'>
-  </form>
-</div>
-<hr>
-{% for photo in photos %}
-  <div>
-    {{ photo.timestamp | local_tz }}
-  </div>
-  <br/>
-  <div>
-    <img src="{{ storage_path }}/{{ photo.key.id() }}" style="max-width: 30%">
-  </div>
-  <div>
-    Tags: {% for tag in photo.tags %} [{{ tag }}] {% endfor %}
-  </div>
-  <br/>
-  <div>
-    <form method=post action={{ url_for('delete') }} enctype="multipart/form-data">
-       <input type=submit value='Delete' name='{{ photo.key.id() }}'>
-    </form>
-  </div>
-  <hr>
-{% endfor %}
+    <title>Photo Upload</title>
+    </div>
+</head>
 
-<script>
-document.getElementById('tag').onchange = function(){ this.form.submit() }
-</script>
+<body>
 
-  </body>
+    <header>
+        
+                    <div class="navbar navbar-dark bg-dark box-shadow">
+                        <div class="container d-flex justify-content-between">
+                            <a href="/" class="navbar-brand d-flex align-items-center">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
+                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round" class="mr-2">
+                                    <path
+                                        d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z">
+                                    </path>
+                                    <circle cx="12" cy="13" r="4"></circle>
+                                </svg>
+                                <strong>Album</strong>
+                            </a>
+                        </div>
+                    </div>
+    </header>
+    <main role="main">
+        <section class="jumbotron text-center">
+            <div class="container">
+                {% from "_formhelpers.html" import render_field %}
+                <h1 class="jumbotron-heading">Photo Album Sample </h1>
+                <p>Note: The latest {{ max_photos }} photos are shown.</p>
+                <div>
+                    <form method=post action={{ url_for('photos') }} enctype="multipart/form-data">
+                        {{ render_field(tag_form.tag) }}
+                    </form>
+                </div>
+                <hr>
+                <div>
+                    <form method=post action={{ url_for('post') }} enctype="multipart/form-data">
+                        {{ render_field(photo_form.input_photo) }}
+                        <br />
+                        <input type=submit value='Upload' name='submit'>
+                    </form>
+                </div>
+            </div>
+        </section>
+        <div class="album py-5 bg-light">
+            <div class="container">
+                <div class="row">
+                    {% for photo in photos %}
+                    <div class="col-md-4">
+                        <div class="card mb-4 box-shadow">
+                            <img class="card-img-top"
+                                data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
+                                alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"
+                                src="{{ storage_path }}/{{ photo.key.id() }}" data-holder-rendered="true">
+
+                            <div class="card-body">
+                                <p class="card-text">Tags: {% for tag in photo.tags %} [{{ tag }}] {% endfor %}</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group">
+                                        <form method=post action={{ url_for('delete') }} enctype="multipart/form-data">
+                                            <input type=submit class="btn btn-sm btn-outline-secondary" value='Delete'
+                                                name='{{ photo.key.id() }}'>
+                                        </form>
+                                    </div>
+                                    <small class="text-muted">{{ photo.timestamp | local_tz }}</small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+            </div>
+            
+        </div>
+        </div>
+    </main>
+    <footer class="text-muted">
+        <div class="container">
+            <p class="float-right">
+                <a href="#">Back to top</a>
+            </p>
+            <p>Album example with Bootstrap</p>
+        </div>
+    </footer>
+
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
