--- a/templates/photos.html
+++ b/templates/photos.html
@@ -95,7 +95,9 @@
             <p>Album example with Bootstrap</p>
         </div>
     </footer>
-
+    <script>
+    document.getElementById('tag').onchange = function(){ this.form.submit() }
+    </script>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
