--- a/templates/photos.html
+++ b/templates/photos.html
@@ -38,7 +38,7 @@
         <section class="jumbotron text-center">
             <div class="container">
                 {% from "_formhelpers.html" import render_field %}
-                <h1 class="jumbotron-heading">Photo Album Sample </h1>
+                <h1 class="jumbotron-heading">Photo Album is Awesome </h1>
                 <p>Note: The latest {{ max_photos }} photos are shown.</p>
                 <div>
                     <form method=post action={{ url_for('photos') }} enctype="multipart/form-data">
